fixed white space at bottom of snake page when fullscreen

--- a/game_logic/snake.css
+++ b/game_logic/snake.css
@@ -29,7 +29,7 @@ html, body {
 }
 
 body {
-    background-image: url("https://i.imgur.com/je3xKei.png");
+    background-image: url("https://i.imgur.com/lElqVCd.png");
     background-size: contain;
 }
 
